[package]
name = "articles1"
version = "0.1.0"
edition = "2021"


[dependencies]
actix-web = "4.9.0"
actix-files = "0.6.6"
actix-multipart = "0.7.2"
futures-util = "0.3.28"
tokio = { version = "1.42.0", features = ["full"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_derive = "1.0.215"
serde_json = "1.0.105"
chrono = "0.4.24"
sanitize-filename = "0.5.0"
env_logger = "0.10.0"
sqlx = { version = "0.7.0", features = ["postgres", "runtime-tokio-native-tls"] }
html-escape = "0.2"
